Hotfix project item collapse issue

--- a/src/sass/components/career.sass
+++ b/src/sass/components/career.sass
@@ -10,7 +10,7 @@
 	&__education
 		display: flex
 		align-items: center
-		@include print-corrected(margin, $bottom:50px)
+		@include print-corrected(margin, $bottom:25px)
 
 		&__wrapper
 			display: flex
