--- a/src/sass/components/career_project_item.sass
+++ b/src/sass/components/career_project_item.sass
@@ -102,6 +102,9 @@
     .project__item__body
         display: flex
 
+// Styles for item closed state
+.is_collapsed.project__item
+    align-self: flex-start
 
 // Mobile
 @media screen and ( max-width: $bp-mobile-to-a4 )
